# duilib

./: .gitignore  .svnignore  CMakeLists.txt  DuiDesigner.sln  DuiLib.sln  DuiLib.vcxproj  DuiLib.vcxproj.filters  LICENSE  README.md  Readme.cmake  Readme.md  Readme.txt  StdAfx.h  UIDefine.h  UIlib.cpp  UIlib.h  appveyor.yml  directui license.txt  duilib license.txt  属性列表.xml  开发支持.txt  开发者名单.txt  感谢名单.txt  版权说明.txt
360SafeDemo/: 360Safe.cpp  360SafeDemo.vcproj  360SafeDemo.vcxproj  360SafeDemo.vcxproj.filters  CMakeLists.txt  ControlEx.h  StdAfx.h
Action/: Action.cpp  Action.h  ActionInterval.cpp  ActionInterval.h  ActionManager.cpp  ActionManager.h  Animation.cpp  Animation.h  WindowAnimation.cpp  WindowAnimation.h
CMake/: DuilibConfig.cmake.in  cmake_uninstall.cmake.in
Control/: UIActiveX.cpp  UIActiveX.h  UIAnimationControl.cpp  UIAnimationControl.h  UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UICombo.cpp  UICombo.h  UIDateTime.cpp  UIDateTime.h  UIEdit.cpp  UIEdit.h  UIFlash.cpp  UIFlash.h  UIGifControl.cpp  UIGifControl.h  UIIPAddress.cpp  UIIPAddress.h  UILabel.cpp  UILabel.h  UIList.cpp  (+17 more)
DuiDesigner/: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  ClassView.cpp  ClassView.h  DialogCheckUpdate.cpp  DialogCheckUpdate.h  DialogCustomFonts.cpp  DialogCustomFonts.h  DialogDefaultAttribList.cpp  DialogDefaultAttribList.h  DialogProjectNew.cpp  DialogProjectNew.h  DialogSaveAsName.cpp  DialogSaveAsName.h  DialogSkinFileNew.cpp  DialogSkinFileNew.h  DialogTemplateOpen.cpp  DialogTemplateOpen.h  DialogUIAttribEdit.cpp  DialogUIAttribEdit.h  DuiDesigner.cpp  DuiDesigner.h  DuiDesigner.rc  DuiDesigner.reg  DuiDesigner.vcproj  FileView.cpp  FileView.h  GlobalVariable.cpp  GlobalVariable.h  HookAPI.cpp  HookAPI.h  ImageDialog.cpp  ImageDialog.h  ImagePreview.cpp  ImagePreview.h  LayoutManager.cpp  LayoutManager.h  MainFrm.cpp  MainFrm.h  (+31 more)
DuiDesigner/res/: UIDesigner.rc2
DuiLib/: CMakeLists.txt  DuiLib.vcproj  DuiLib.vcxproj  DuiLib.vcxproj.filters  DuiLib_Static.vcxproj  DuiLib_Static.vcxproj.filters  StdAfx.cpp  StdAfx.h  UIlib.cpp  UIlib.h
DuiLib/Control/: UIActiveX.cpp  UIActiveX.h  UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UICombo.cpp  UICombo.h  UIComboBox.cpp  UIComboBox.h  UIDateTime.cpp  UIDateTime.h  UIEdit.cpp  UIEdit.h  UIFlash.cpp  UIFlash.h  UIGifAnim.cpp  UIGifAnim.h  UILabel.cpp  UILabel.h  UIList.cpp  UIList.h  UIOption.cpp  UIOption.h  UIProgress.cpp  UIProgress.h  UIRichEdit.cpp  UIRichEdit.h  UIScrollBar.cpp  UIScrollBar.h  UISlider.cpp  UISlider.h  UIText.cpp  UIText.h  UITreeView.cpp  UITreeView.h  UIWebBrowser.cpp  UIWebBrowser.h
DuiLib/Core/: ResourceManager.cpp  ResourceManager.h  UIBase.cpp  UIBase.h  UIContainer.cpp  UIContainer.h  UIControl.cpp  UIControl.h  UIDefine.h  UIDlgBuilder.cpp  UIDlgBuilder.h  UIManager.cpp  UIManager.h  UIMarkup.cpp  UIMarkup.h  UIRender.cpp  UIRender.h
DuiLib/Layout/: UIChildLayout.cpp  UIChildLayout.h  UIHorizontalLayout.cpp  UIHorizontalLayout.h  UITabLayout.cpp  UITabLayout.h  UITileLayout.cpp  UITileLayout.h  UIVerticalLayout.cpp  UIVerticalLayout.h
DuiLib/Utils/: FlashEventHandler.h  UIDelegate.cpp  UIDelegate.h  Utils.cpp  Utils.h  WebBrowserEventHandler.h  WinImplBase.cpp  WinImplBase.h  WndShadow.cpp  WndShadow.h  XUnzip.cpp  downloadmgr.h  flash11.tlh  stb_image.c  stb_image.h
FlashDemo/: App.cpp  CMakeLists.txt  FlashDemo.vcproj  FlashDemo.vcxproj  FlashDemo.vcxproj.filters  StdAfx.h  flash10a.tlh
GameDemo/: CMakeLists.txt  ControlEx.h  GameDemo.cpp  GameDemo.rc  GameDemo.sln  GameDemo.vcproj  GameDemo.vcxproj  GameDemo.vcxproj.filters  MiniDumper.cpp  MiniDumper.h  StdAfx.h  resource.h
ListDemo/: CMakeLists.txt  ListDemo.vcproj  ListDemo.vcxproj  ListDemo.vcxproj.filters  Main.cpp  MenuWnd.h
MenuDemo/: About.cpp  About.h  CMakeLists.txt  MenuDemo.rc  MenuDemo.vcproj  MenuDemo.vcxproj  MenuDemo.vcxproj.filters  MenuNotify.cpp  MenuNotify.h  SkinSetting.cpp  SkinSetting.h  StdAfx.h  UICrack.cpp  UICrack.h  UIMenu.cpp  UIMenu.h  debug.cpp  debug.hpp  main.cpp  main_frame.cpp  main_frame.hpp  observer_impl_base.hpp  resource.h
MenuDemo/res/: menutest.xml  skin.xml
QQDemo/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.hpp  QQDemo.rc  QQDemo.vcproj  QQDemo.vcxproj  QQDemo.vcxproj.filters  StdAfx.cpp  StdAfx.h  UIFriends.cpp  UIFriends.hpp  UIGroups.cpp  UIGroups.hpp  UIListCommonDefine.cpp  UIListCommonDefine.hpp  UIMicroBlog.cpp  UIMicroBlog.hpp  chat_dialog.cpp  chat_dialog.hpp  color_skin.cpp  color_skin.hpp  debug.cpp  debug.hpp  main.cpp  main_frame.cpp  main_frame.hpp  observer_impl_base.hpp  resource.h  skin_change_event.hpp
RichListDemo/: CMakeLists.txt  ReadMe.txt  Resource.h  RichListDemo.cpp  RichListDemo.rc  RichListDemo.vcproj  RichListDemo.vcxproj  RichListDemo.vcxproj.filters  RichListWnd.cpp  RichListWnd.h  stdafx.cpp  stdafx.h
demos/DirectUIDemo/: CMakeLists.txt  DirectUIDemo.cpp  DirectUIDemo.vcxproj  DirectUIDemo.vcxproj.filters  MainWnd.cpp  MainWnd.h  MessageDlg.cpp  MessageDlg.h  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
src/: CMakeLists.txt  DirectUI.h  DirectUI.vcxproj  DirectUI.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.cpp  stdafx.h
src/Base/: FontObject.cpp  FontObject.h  ImageObject.cpp  ImageObject.h  ObjectUI.cpp  ObjectUI.h  ResourceManager.cpp  ResourceManager.h  TemplateObject.cpp  TemplateObject.h  UIEngine.cpp  UIEngine.h  WindowWnd.cpp  WindowWnd.h
src/Control/: ButtonUI.cpp  ButtonUI.h  ControlUI.cpp  ControlUI.h  EditUI.cpp  EditUI.h  LabelUI.cpp  LabelUI.h  RichEditUI.cpp  RichEditUI.h  ScrollBarUI.cpp  ScrollBarUI.h
src/Define/: IUIRender.cpp  IUIRender.h  UIDefine.h
src/Layout/: ChildLayoutUI.cpp  ChildLayoutUI.h  ContainerUI.cpp  ContainerUI.h  HorizontalLayoutUI.cpp  HorizontalLayoutUI.h  TabLayoutUI.cpp  TabLayoutUI.h  VerticalLayoutUI.cpp  VerticalLayoutUI.h
src/Render/: GDIRender.cpp  GDIRender.h  UIPaint.cpp  UIPaint.h
src/TinyXml/: ticpprc.h  tinystr.h  tinyxmlerror.cpp
src/Utils/: BufferPtr.h  UIDelegate.cpp  UIDelegate.h  UIUtils.cpp  UIUtils.h  stb_image.c
src/Window/: WindowUI.cpp  WindowUI.h
(+185 files in other folders)
